--- a/Area51/shop/templates/shop/index.html
+++ b/Area51/shop/templates/shop/index.html
@@ -32,8 +32,10 @@
   </style>
   </head>
   <body>
-  {% load static %}
 {% block body %}
+
+ {% load static %}
+<pre><h1>           Men's Fashion</h1></pre>
 <div class="container">
 <div id="demo" class="carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
@@ -48,17 +50,17 @@
     <div class="container carousel-inner no-padding">
 
       <div class="carousel-item active">
-        <div class="col-xs-3 col-sm-3 col-md-3">
-          <div class="card" style="width: 18rem;">
-            <img src='/media/{{product.0.image}}' class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{product.0.product_name}}</h5>
-                <p class="card-text">{{product.0.desc}}</p>
-                <a href="#" class="btn btn-primary">Add To Cart</a>
-            </div>
-          </div>
-       </div>
-        {% for i in product|slice:'1:' %}
+<!--        <div class="col-xs-3 col-sm-3 col-md-3">-->
+<!--          <div class="card" style="width: 18rem;">-->
+<!--                <img src='/media/{{product.0.image}}' class="card-img-top" alt="...">-->
+<!--            <div class="card-body">-->
+<!--                <h5 class="card-title">{{product.0.product_name}}</h5>-->
+<!--                <p class="card-text">{{product.0.desc}}</p>-->
+<!--                <a href="#" class="btn btn-primary">Add To Cart</a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--       </div>-->
+        {% for i in product %}
         <div class="col-xs-3 col-sm-3 col-md-3">
           <div class="card" style="width: 18rem;">
             <img src='/media/{{i.image}}' class="card-img-top" alt="...">
@@ -69,7 +71,7 @@
             </div>
           </div>
         </div>
-          {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
+          {% if forloop.counter|divisibleby:4 and not forloop.last %}
       </div><div class="carousel-item">
         {% endif %}
 
